--- a/jcode/package.json
+++ b/jcode/package.json
@@ -9,6 +9,9 @@
   "categories": [
     "Programming Languages"
   ],
+  "activationEvents": [
+    "onLanguage:jcode"
+  ],
   "contributes": {
     "languages": [
       {
