--- a/jcode/package.json
+++ b/jcode/package.json
@@ -9,9 +9,7 @@
   "categories": [
     "Programming Languages"
   ],
-  "activationEvents": [
-    "onLanguage:jcode"
-  ],
+  "activationEvents": [],
   "contributes": {
     "languages": [
       {
